--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Liens Stylisés</title>
+    <style>
+        body {
+            font-family: "Segoe UI", Roboto, Arial, sans-serif;
+            background: linear-gradient(180deg, #fff7f0 0%, #ffe8d0 100%);
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+        }
 
+        .container {
+            background: #fff6ef; /* simple, chaleureux */
+            padding: 32px;
+            border-radius: 12px;
+            box-shadow: none; /* pas d'ombre */
+            color: #4a2f1f;
+            max-width: 460px;
+            width: 90%;
+            border: 1px solid rgba(74,47,31,0.06);
+        }
+
+        h1 {
+            text-align: center;
+            color: #8a4b2a;
+            margin: 0 0 16px 0;
+            font-weight: 600;
+        }
+
+        .links {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            padding: 10px 14px;
+            border-radius: 8px;
+            transition: background 0.15s ease, transform 0.12s ease;
+            font-weight: 600;
+            text-align: center;
+            display: block;
+            color: #b84b2b;
+            background: transparent;
+            border: 1px solid rgba(184,75,43,0.12);
+        }
+
+        a:hover {
+            background: rgba(184,75,43,0.08);
+            transform: translateY(-2px);
+        }
+
+        .links p {
+            margin: 6px 0 12px 0;
+            color: #6b4b3a;
+            font-size: 0.95rem;
+            line-height: 1.3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Du contenu fun</h1>
+        <div class="links">
+            <a href="https://www.youtube.com/@DeathTempler">DeathTempler (YouTube)</a>
+            <p> En Clair, I essaie de fabriquer les memes Robot que dans Murder Drone</p>
+            <a href="https://www.sharyap.com/">Sharyap</a>
+            <p> Un Site Web très inspirant</p>
+            <a href="https://voxtek.hazbinhotel.com/">Voxtek</a>
+            <p> Pour les fans de hazbin hotel </p>
+            <a href="https://www.youtube.com/@ClemmyGames">ClemmyGames (YouTube)</a>
+            <p> Pour les nouveaux jeux video a tester</p>
+            <a href="https://www.youtube.com/@LionelYuPiano">LionelYuPiano (YouTube)</a>
+            <p> Pour de belles composition musicale</p>
+        </div>
+    </div>
+</body>
+</html>
