Grammatical Error fix

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <h1>Du contenu fun</h1>
         <div class="links">
             <a href="https://www.youtube.com/@DeathTempler">DeathTempler (YouTube)</a>
-            <p> En Clair, I essaie de fabriquer les memes Robot que dans Murder Drone</p>
+            <p> Il essaie de fabriquer les mêmes robots que ceux dans Murder Drone (Une Serie)</p>
             <a href="https://www.sharyap.com/">Sharyap</a>
             <p> Un Site Web très inspirant</p>
             <a href="https://voxtek.hazbinhotel.com/">Voxtek</a>
             <p> Pour les fans de hazbin hotel </p>
             <a href="https://www.youtube.com/@ClemmyGames">ClemmyGames (YouTube)</a>
             <p> Pour les nouveaux jeux video a tester</p>
-            <a href="https://www.youtube.com/@LionelYuPiano">LionelYuPiano (YouTube)</a>
+            <a href="https://www.youtube.com/@LionelYuPiano">LionelYu (YouTube)</a>
             <p> Pour de belles composition musicale</p>
         </div>
     </div>
